📝 starter.sh支持非交互启停，为FastJson新增add-opens；忽略Connect协议警报